2011-11-06  Maarten Boonekamp
	* improve LARNOISE handling
	* Tagging as PATJobTransforms-00-03-74

2011-11-04 Thomas Gadfort <tgadfort@bnl.gov>
    * Adding new output for B-physics needed for H-ION running
    * Not tagged yet.

2011-11-03 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Correct definition of tmpRDO argument.
	* Tagging as PATJobTransforms-00-03-73    

2011-11-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Print full help for '--help' as well as '-h' (BaseOfCompositeTrf)

2011-10-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding outputNTUP_SMWENUJJFile and outputNTUP_SMWMUNUJJFile
	  in scripts/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-72

2011-10-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Define tmpRDO in Configuration.py
    * Tagging as PATJobTransforms-00-03-71    

2011-10-20 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Update DefaultInputs to use EOS instead of CASTOR
    * Tagging as PATJobTransforms-00-03-70    

2011-10-16  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_JETMETFULL,outputNTUP_JETMETWZ,outputNTUP_JETMETEMCL in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-69

2011-10-10 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added outputNTUP_MUONFile in scripts/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-68

2011-10-10  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYLLPFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-67

2011-09-28  Junji Tojo <Junji.Tojo@cern.ch>
        * A typo corrected in outputNTUP_TOPBOOSTFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-66

2011-09-28  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_TOPBOOSTFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-65

2011-09-28  Junji Tojo <Junji.Tojo@cern.ch>
	* Add outputNTUP_SUSYSKIMFile and outputNTUP_SUSY01LEPFile in script/Reco_trf.py